tests/m1/negative/private_reexport_enum.ax
module private_reexport_enum;

import m1lib.reexport_facade;

fn main() -> i32 {
    let value = SecretMode_hidden;
    return 0;
}

